[gd_scene load_steps=12 format=2]

[ext_resource path="res://Game Play/Normal Level/NormalLevelQn3.gd" type="Script" id=1]
[ext_resource path="res://sprites/tower/internal tower tiles bg.png" type="Texture" id=2]
[ext_resource path="res://sprites/buttons or icons/rectangular button.png" type="Texture" id=3]
[ext_resource path="res://sprites/buttons or icons/rectangular popup.png" type="Texture" id=4]
[ext_resource path="res://sprites/buttons or icons/x button.png" type="Texture" id=5]
[ext_resource path="res://sprites/tower/star.png" type="Texture" id=6]
[ext_resource path="res://sprites/tower/open normal level door.png" type="Texture" id=7]
[ext_resource path="res://Player/King.tscn" type="PackedScene" id=8]
[ext_resource path="res://Game Play/Normal Level/TowerBricks.tscn" type="PackedScene" id=9]
[ext_resource path="res://sprites/tower/closed normal level door.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 111.389, 127.707 )

[node name="NormalLevelQn3" type="Node2D"]
script = ExtResource( 1 )

[node name="TowerBackground" type="TextureRect" parent="."]
margin_right = 1916.0
margin_bottom = 1078.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowerBricks3" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 736.877, 1030.94 )

[node name="TowerBricks4" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 1034.18, 1030.94 )

[node name="TowerBricks5" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 1612.13, 1030.94 )

[node name="TowerBricks6" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 1902.3, 1028.56 )

[node name="TowerBricks7" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 1321.97, 1033.31 )

[node name="TowerBricks2" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 439.575, 1028.56 )

[node name="TowerBricks" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 149.408, 1030.94 )

[node name="TowerBricks8" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 80.4344, 957.204 )

[node name="TowerBricks9" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 375.358, 954.826 )

[node name="TowerBricks10" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 660.767, 954.826 )

[node name="TowerBricks11" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 955.691, 954.826 )

[node name="TowerBricks12" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 1248.24, 957.204 )

[node name="TowerBricks13" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 1545.54, 954.826 )

[node name="TowerBricks14" parent="TowerBackground" instance=ExtResource( 9 )]
position = Vector2( 1838.09, 954.826 )

[node name="Qn3" type="TextureRect" parent="."]
margin_left = 247.0
margin_top = 50.0
margin_right = 1682.0
margin_bottom = 237.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Correct" type="TextureButton" parent="Qn3"]
margin_left = 1143.58
margin_top = 276.856
margin_right = 1307.58
margin_bottom = 363.856
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrong1" type="TextureButton" parent="Qn3"]
margin_left = 174.879
margin_top = 284.183
margin_right = 253.879
margin_bottom = 356.183
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrong2" type="TextureButton" parent="Qn3"]
margin_left = 839.637
margin_top = 284.9
margin_right = 918.637
margin_bottom = 356.9
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrong3" type="TextureButton" parent="Qn3"]
margin_left = 515.419
margin_top = 281.52
margin_right = 594.419
margin_bottom = 353.52
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnsCorrectMsg" type="TextureButton" parent="Qn3"]
margin_left = 477.775
margin_top = 419.0
margin_right = 944.775
margin_bottom = 558.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnsWrongMsg" type="TextureButton" parent="Qn3"]
margin_left = 477.775
margin_top = 419.0
margin_right = 944.775
margin_bottom = 558.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnsButton" type="TextureButton" parent="Qn3"]
margin_left = 569.696
margin_top = 602.652
margin_right = 653.696
margin_bottom = 687.652
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NormalLvlDoorClosed" type="StaticBody2D" parent="."]
position = Vector2( 1726.86, 851.163 )
scale = Vector2( 0.7, 0.7 )

[node name="Sprite" type="Sprite" parent="NormalLvlDoorClosed"]
position = Vector2( -26.9391, -20.8457 )
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NormalLvlDoorClosed"]
position = Vector2( -18.9211, -30.4668 )
shape = SubResource( 1 )

[node name="NormalLvlDoorOpen" type="TextureButton" parent="."]
margin_left = 1615.96
margin_top = 725.245
margin_right = 1810.96
margin_bottom = 936.245
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="King" parent="." instance=ExtResource( 8 )]
position = Vector2( 35.6762, 839.58 )

[connection signal="pressed" from="Qn3/Correct" to="." method="_on_Correct_pressed"]
[connection signal="pressed" from="Qn3/Wrong1" to="." method="_on_Wrong_pressed"]
[connection signal="pressed" from="Qn3/Wrong2" to="." method="_on_Wrong_pressed"]
[connection signal="pressed" from="Qn3/Wrong3" to="." method="_on_Wrong_pressed"]
[connection signal="pressed" from="NormalLvlDoorOpen" to="." method="_on_Open_Door_pressed"]
